--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "http://erfaneo.github.io/Swiper-With-React",
-  "name": "react-swiper-maker",
+  "homepage": "http://erfaneo.github.io/Components-React",
+  "name": "Components-React",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
